Bug 1396976 - Flush IME document changes when entering nested Document Update, r=masayuki